--- a/THANKS
+++ b/THANKS
@@ -9,7 +9,9 @@ Cambridge Yang
 Caroline Lemieux
 Christian Dax
 Christopher Ziegler
+Clément Tamines
 David Müller
+Edmond Irani Liu
 Ernesto Posse
 Étienne Renault
 Fabrice Kordon
@@ -30,6 +32,7 @@ Joachim Klein
 Juan Tzintzun
 Juraj Major
 Kristin Y. Rozier
+Marc Espie
 Martin Dieguez Lodeiro
 Matthias Heizmann
 Maxime Bouton
@@ -43,10 +46,11 @@ Paul Guénézan
 Reuben Rowe
 Roei Nahum
 Rüdiger Ehlers
-Silien Hong
-Simon Jantsch
+Shachar Itzhaky
 Shengping Shaw
 Shufang Zhu
+Silien Hong
+Simon Jantsch
 Sonali Dutta
 Tereza Šťastná
 Tobias Meggendorfer.
@@ -56,5 +60,6 @@ Victor Khomenko
 Vitus Lam
 Yann Thierry-Mieg
 Yannick Molinghen
+Yechuan Xia
 Yong Li
 Yuri Victorovich
