--- a/doc/spot.bib
+++ b/doc/spot.bib
@@ -82,6 +82,20 @@
   doi		= {10.1007/978-3-642-36742-7_3}
 }
 
+@InProceedings{	  blahoudek.16.atva,
+  author	= {Franti{\v{s}}ek Blahoudek and Matthias Heizmann and Sven
+		  Schewe and Jan Strej{\v{c}}ek and Ming-Hsien Tsai},
+  editor	= {Marsha Chechik and Jean-Fran{\c{c}}ois Raskin},
+  title		= {Complementing Semi-deterministic {B\"u}chi Automata},
+  booktitle	= {Proceedings of the 22th International Conférence on Tools
+		  and Algorithms for the Construction and Analysis of
+		  Systems},
+  year		= 2016,
+  publisher	= {Springer},
+  pages		= {770--787},
+  doi		= {10.1007/978-3-662-49674-9_49}
+}
+
 @InProceedings{	  bloemen.16.hvc,
   title		= {Multi-core SCC-Based LTL Model Checking},
   author	= {Vincent Bloemen and {van de Pol}, {Jan Cornelis}},
@@ -281,6 +295,18 @@
   series	= {Lecture Notes in Computer Science},
   publisher	= {Springer-Verlag},
   doi		= {10.1007/978-3-642-04761-9_19}
+}
+
+@InProceedings{	  degiacomo.13.ijcai,
+  author	= {Giuseppe De Giacomo and Moshe Y. Vardi},
+  title		= {Linear Temporal Logic and Linear Dynamic Logic on Finite
+		  Traces},
+  booktitle	= {Proceedings of the 23rd International Joint Conference on
+		  Artificial Intelligence (IJCAI'13)},
+  year		= 2013,
+  editor	= {Francesca Rossi},
+  pages		= {854--860},
+  month		= aug
 }
 
 @InProceedings{	  duret.11.vecos,
@@ -793,6 +819,22 @@
   series	= {Lecture Notes in Computer Science},
   volume	= {7795},
   doi		= {10.1007/978-3-642-36742-7_42}
+}
+
+@InProceedings{	  renkin.20.atva,
+  author	= {Florian Renkin and Alexandre Duret-Lutz and Adrien
+		  Pommellet},
+  title		= {Practical ``Paritizing'' of {E}merson-{L}ei Automata},
+  booktitle	= {Proceedings of the 18th International Symposium on
+		  Automated Technology for Verification and Analysis
+		  (ATVA'20)},
+  year		= {2020},
+  volume	= {12302},
+  series	= {Lecture Notes in Computer Science},
+  pages		= {127--143},
+  month		= oct,
+  publisher	= {Springer},
+  doi		= {10.1007/978-3-030-59152-6_7}
 }
 
 @InProceedings{	  rozier.07.spin,
